# dotcom

./: .gitignore  .htaccess  README.md  _redirects  arduino.html  arduino_sensors.html  arduino_temp.html  artificial_general_intelligence.html  becca.html  becca_6_chase_demo.html  becca_8_release.html  blog.html  calculus_resources.html  card.html  choosing_project.html  code_optimization.html  commit.html  convert_rgb_to_grayscale.html  convolution_one_d.html  correcting_for_peeking.html  data_eng_for_beginners.html  data_files.html  data_science_archetypes.html  data_science_other_stuff.html  dataframe_indexing.html  datetime_tricks.html  db_awkwardness.html  deep_learning_demystified.html  distributed_data_science_team.html  dsmq.html  e2eml_lessons.html  empirical_design_rl.html  evopowell.html  exponential_smoothing.html  feed.xml  find_the_right_algorithm.html  five_questions_data_science_answers.html  frequently_asked_questions.html  get_data_science_job.html  git_resources.html  (+60 more)
bucket_tree/: test_bucket_tree.py
buckettree/: bucket_tree.py  test_bucket_tree.py
httyr/: httyr.html  httyr01.html  httyr02.html  httyr03.html  httyr04.html
javascripts/: blog_footer.js  blog_header.js  blog_signature.js
latex/: arduino_temp.tex
markdown/: arduino.md  arduino_sensors.md  arduino_temp.md  audio.py  converter.py  courses.md  data_eng_for_beginners.md  data_stack.md  empirical_design_rl.md  footer.html  header.html  image_test.md  link_test.md  list_test.md  lora.md  microsuffers.md  pendulum.md  study_helthetica.md  study_shoppi.md
myrtle/: pendulum_monitor.js
(+1 files in other folders)
