[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bucket-tree"
version = "0.0.1"
authors = [
  { name="Brandon Rohrer", email="brohrer@gmail.com" },
]
description="An online hierarchical binning algorithm"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
README = "https://codeberg.org/brohrer/bucket-tree/src/branch/main/README.md"
Repository = "https://codeberg.org/brohrer/bucket-tree.git"
